# TinygetUI

./: .prettierrc  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.js
.github/workflows/: arm.yml  build.yml
public/: index.css  manifest.json
src/: App.jsx  App.module.css  Providers.jsx  env.js  main.jsx
src-tauri/: Cargo.toml  build.rs  rustfmt.toml  tauri.conf.json
src-tauri/icons/: about.txt
src-tauri/protos/: tinyget_grpc.proto  tinyget_grpc.rs
src-tauri/src/: lib.rs  main.rs  sys_tray.rs  tinyget.rs  utils.rs
src-tauri/src/tinyget/: get.rs  get_list.rs  history.rs  install.rs  log.rs  uninstall.rs  update.rs
src/common/: utils.js
src/components/: LanguageHeaders.jsx  Mantine.jsx  Mantine.module.css  ScrollToTop.jsx  SoftwaresGet.jsx  SoftwaresHistory.jsx  SoftwaresLists.jsx  SoftwaresUpdate.jsx
src/tauri/: TauriProvider.jsx  TitleBar.jsx  TitleBar.module.css  storage.js
src/translations/: en.json  i18n.js  zh_CN.json
src/views/: About.jsx  Histories.jsx  Install.jsx  Install.module.css  Installed.jsx  Logs.jsx  MirrorHelp.jsx  Settings.jsx  Sources.jsx  Update.jsx
