[package]
name = "tinyget_ui"
version = "0.0.1"
description = "Tinyget UI"
authors = ["RoyenHeart"]
license = "GPL-2.0-or-later"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.0", features = [] }
tonic-build = "0.12.2"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6", features = [
    "window-hide",
    "dialog-message",
    "fs-create-dir",
    "fs-read-dir",
    "fs-write-file",
    "icon-ico",
    "notification-all",
    "os-all",
    "path-all",
    "process-relaunch",
    "shell-open",
    "system-tray",
    "window-close",
    "window-maximize",
    "window-minimize",
    "window-set-decorations",
    "window-set-focus",
    "window-set-fullscreen",
    "window-set-size",
    "window-start-dragging",
    "window-unmaximize",
    "window-unminimize",
] }
tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
window-shadows = { git = "https://github.com/tauri-apps/window-shadows", branch = "dev" }
tokio = { version = "1.36.0", features = ["time", "macros", "rt-multi-thread"] }
prost = "0.13.2"
tonic = "0.12.3"
log = "0.4.22"
portable-pty = "0.8.1"
whoami = "1.5.2"

[target.'cfg(target_os = "linux")'.dependencies]
dbus = "0.9"

[features]
default = ["custom-protocol"]
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"   # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true        # Enables link to optimizations
opt-level = "s"   # Optimize for binary size
# strip = true  # Automatically strip symbols from the binary.
